<resources>
    <string name="app_name">Teeth Kids</string>

    <string name="login">Entrar</string>

    <string name="conclude">Concluir</string>

    <!-- SignInFragment -->
    <string name="fragment_title_sign_in">Teeth Kids</string>
    <string name="not_signed">Ainda não possui conta?</string>

    <!-- SignUpFragment -->
    <string name="fragment_title_sign_up">Criar Conta</string>

    <!-- Sign Up | Cadastro de Dentista -->
    <string name="complete_name">Nome Completo</string>
    <string name="phone">Telefone</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="conf_password">Confirmar Senha</string>
    <string name="resume">Currículo</string>
    <string name="address">Endereço</string>

    <!-- Resume Fragment -->
    <string name="fragment_title_resume">Adicionar Currículo</string>

    <!-- AddressListFragment -->
    <string name="fragment_title_address_list">Lista de Endereços</string>

    <!-- AddressRegisterFragment -->
    <string name="fragment_title_address_register">Cadastro de Endereço</string>

    <!-- EditAddressFragment -->
    <string name="fragment_title_edit_address">Editar Endereço</string>

    <!-- Address Register | Cadastro de Endereço -->
    <string name="address_name">Nome</string>
    <string name="postal_code">CEP</string>
    <string name="street">Rua</string>
    <string name="number">Número</string>
    <string name="complement">Complemento</string>
    <string name="neighborhood">Bairro</string>
    <string name="city">Cidade</string>
    <string name="state">Estado</string>

    <!-- ProfileFragment -->
    <string name="fragment_title_profile">Perfil</string>
    <string name="edit">Editar</string>
    <string name="status">Meus Status</string>
    <string name="addresses">Endereços</string>
    <string name="emergencies">Emergências</string>
    <string name="reputation">Minha Reputação</string>
    <string name="rank">Solicitar Avaliação</string>

    <!-- EditProfileFragment -->
    <string name="fragment_title_edit_profile">Editar Perfil</string>

    <!-- EmergenciesListFragment -->
    <string name="fragment_emergencies_historic">Histórico de Emergências</string>
    <string name="fragment_emergency_detail">Detalhes de Emergência</string>
    <string name="accept">Aceitar</string>
    <string name="decline">Recusar</string>

    <string name="default_notification_channel_id" translatable="false">canal_padrao</string>
    <string name="fcm_default_title_message" translatable="false">Mensagem</string>

    <!-- -->
    <string name="empty_addresses_list_title">Sem Endereços Cadastrados!</string>
    <string name="empty_addresses_list_subtitle">Por favor, Adicione um Endereço</string>

    <!-- Detalhes de Emergência - Fotos -->
    <string name="emergency_detail_region">Região Acidentada</string>
    <string name="emergency_detail_document">Documento do Solicitante</string>
    <string name="emergency_detail_wchild">Acompanhada da Criança</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="finalize">finalizar</string>


    <string name="take_picture">Tirar foto</string>
    <string name="sucess_cases">Casos Atendidos com Sucesso</string>
    <string name="feedbacks">Avaliações</string>
    <string name="map_id">777f01b938db170d</string>
</resources>