<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/SignInFragment">

    <!-- Login Dentista -->
    <fragment
        android:id="@+id/SignInFragment"
        android:name="com.kids.teeth.dentista.fragment.SignInFragment"
        android:label="@string/fragment_title_sign_in"
        tools:layout="@layout/fragment_sign_in">

        <action
            android:id="@+id/action_SignInFragment_to_ProfileFragment"
            app:destination="@id/ProfileFragment" />

        <action
            android:id="@+id/action_SignInFragment_to_SignUpFragment"
            app:destination="@id/SignUpFragment" />
    </fragment>

    <!-- Cadastrar Dentista -->
    <fragment
        android:id="@+id/SignUpFragment"
        android:name="com.kids.teeth.dentista.fragment.SignUpFragment"
        android:label="@string/fragment_title_sign_up"
        tools:layout="@layout/fragment_sign_up">

        <action
            android:id="@+id/action_SignUpFragment_to_SignInFragment"
            app:destination="@id/SignInFragment"/>

        <action
            android:id="@+id/action_SignUpFragment_to_AddressesListFragment"
            app:destination="@id/AddressesListFragment"/>

        <action
            android:id="@+id/action_SignUpFragment_to_ResumeFragment"
            app:destination="@id/ResumeFragment"/>

        <argument
            android:name="resumeRegistered"
            app:argType="string"
            android:defaultValue="Invalido" />

    </fragment>

    <!-- Preencher Currículo -->
    <fragment
        android:id="@+id/ResumeFragment"
        android:name="com.kids.teeth.dentista.fragment.ResumeFragment"
        android:label="@string/fragment_title_resume"
        tools:layout="@layout/fragment_resume">

        <action
            android:id="@+id/action_ResumeFragment_to_SignUpFragment"
            app:destination="@id/SignUpFragment"/>
    </fragment>

    <!-- Lista de Endereços -->
    <fragment
        android:id="@+id/AddressesListFragment"
        android:name="com.kids.teeth.dentista.fragment.AddressesListFragment"
        android:label="@string/fragment_title_address_list"
        tools:layout="@layout/fragment_addresses_list">

        <action
            android:id="@+id/action_AddressesListFragment_to_SignUpFragment"
            app:destination="@id/SignUpFragment"/>

        <action
            android:id="@+id/action_AddressesListFragment_to_AddressRegisterFragment"
            app:destination="@id/AddressRegisterFragment"/>

        <action
            android:id="@+id/action_AddressesListFragment_to_ProfileFragment"
            app:destination="@id/ProfileFragment"/>
        <argument
            android:name="loggedIn"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>

    <!-- Cadastro de Endereço -->
    <fragment
        android:id="@+id/AddressRegisterFragment"
        android:name="com.kids.teeth.dentista.fragment.AddressRegisterFragment"
        android:label="@string/fragment_title_address_register"
        tools:layout="@layout/fragment_address_register">

        <action
            android:id="@+id/action_AddressRegisterFragment_to_AddressesListFragment"
            app:destination="@id/AddressesListFragment"/>
    </fragment>

    <!-- Perfil -->
    <fragment
        android:id="@+id/ProfileFragment"
        android:name="com.kids.teeth.dentista.fragment.ProfileFragment"
        android:label="@string/fragment_title_profile"
        tools:layout="@layout/fragment_profile">

        <action
            android:id="@+id/action_ProfileFragment_to_SignInFragment"
            app:destination="@id/SignInFragment"/>
        <action
            android:id="@+id/action_ProfileFragment_to_EditProfileFragment"
            app:destination="@id/EditProfileFragment"/>
        <action
            android:id="@+id/action_ProfileFragment_to_AddressesListFragment"
            app:destination="@+id/AddressesListFragment"/>
        <action
            android:id="@+id/action_ProfileFragment_to_EmergenciesListFragment"/>
        <action
            android:id="@+id/action_ProfileFragment_to_ReputationFragment"/>
        <action
            android:id="@+id/action_ProfileFragment_to_RequestFeedbackFragment"/>
    </fragment>

    <!-- Editar Perfil -->
    <fragment
        android:id="@+id/EditProfileFragment"
        android:name="com.kids.teeth.dentista.fragment.EditProfileFragment"
        android:label="@string/fragment_title_edit_profile"
        tools:layout="@layout/fragment_edit_profile">

        <action
            android:id="@+id/action_EditProfileFragment_to_ProfileFragment"
            app:destination="@id/ProfileFragment"/>

    </fragment>

    <!-- Emergências -->
    <fragment
        android:id="@+id/EmergenciesListFragment"
        android:name="com.kids.teeth.dentista.fragment.EmergenciesListFragment"
        android:label="@string/emergencies"
        tools:layout="@layout/fragment_emergencies_list">

        <action
            android:id="@+id/action_EmergenciesListFragment_to_ProfileFragment"
            app:destination="@id/ProfileFragment"/>
    </fragment>

    <!-- Minha Reputação
    <fragment
        android:id="@+id/ReputationFragment"
        android:name="com.kids.teeth.dentista.fragment.ReputationFragment"
        android:label="@string/reputation"
        tools:layout="@layout/fragment_reputation">

        <action
            android:id="@+id/action_ReputationFragment_to_ProfileFragment"
            app:destination="@id/ProfileFragment"/>
    </fragment>-->

    <!-- Solicitar Avaliação
    <fragment
        android:id="@+id/FeedbackFragment"
        android:name="com.kids.teeth.dentista.fragment.FeedbackFragment"
        android:label="@string/feedback"
        tools:layout="@layout/fragment_feedback">

        <action
            android:id="@+id/action_FeedbackFragment_to_ProfileFragment"
            app:destination="@id/ProfileFragment"/>
    </fragment>-->

</navigation>

