<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tk_grey"
    tools:context=".fragment.SignInFragment">

    <!-- E-mail -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilEmailSignIn"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/email"
        android:textColorHint="@color/tk_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:inputType="textEmailAddress"
            android:textColor="@color/tk_blue" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Senha -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilPasswordSignIn"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/password"
        android:textColorHint="@color/tk_blue"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@id/ilEmailSignIn"
        app:layout_constraintStart_toStartOf="@id/ilEmailSignIn"
        app:layout_constraintTop_toBottomOf="@id/ilEmailSignIn">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPasswordSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:inputType="textPassword"
            android:textColor="@color/tk_blue" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- CONCLUIR -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@color/tk_blue"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>