<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvAddress"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:clickable="true"
    android:foreground="?selectableItemBackground"
    app:cardCornerRadius="10dp"
    app:cardElevation="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/tk_grey">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivEmergency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/ic_emergency"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnAccept"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmergencyRequesterName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/tk_blue"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="20dp"
            android:text="@string/emergencies"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivEmergency"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnAccept"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/accept_emergency"
            android:drawableStart="@drawable/ic_accept"
            android:text="@string/accept"
            android:textSize="12sp"
            android:textColor="@color/accept_emergency_text"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="30dp"
            app:layout_constraintStart_toEndOf="@id/ivEmergency"
            app:layout_constraintTop_toBottomOf="@id/tvEmergencyRequesterName" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDecline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/decline_emergency"
            android:drawableStart="@drawable/ic_decline"
            android:textSize="12sp"
            android:text="@string/decline"
            android:textColor="@color/decline_emergency_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnAccept"
            app:layout_constraintTop_toBottomOf="@id/tvEmergencyRequesterName" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>